Fix minor spacing/css issues

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,7 +12,7 @@
   --warning-color: #d9c98d;
   --link-color: #2979bc;
   --visited-link-color: #8f5baa;
-  --full-width: 600px;
+  --full-width: 640px;
   --add-media-width: 240px;
 }
 
@@ -156,6 +156,7 @@ figure figcaption {
 .post-list > .post-list-info {
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   margin-right: 0.5rem;
 }
 
@@ -307,11 +308,12 @@ blockquote p,
 }
 
 /* adjustment when very small */
-@media only screen and (max-width: 660px) {
+@media only screen and (max-width: 700px) {
 
   .post-list,
   .post-list > .post-list-info {
     margin-right: inherit;
+    white-space: normal;
   }
 
   .post-list > .post-list-date {
