--- a/assets/css/photos-list.css
+++ b/assets/css/photos-list.css
@@ -41,7 +41,7 @@
   fill: var(--heart-hover);
 }
 
-@media only screen and (max-width: 660px) {
+@media only screen and (max-width: 700px) {
   .content {
     padding: 2rem 0;
   }
